2010-09-06  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.4 release procedure:
 	Changes since nco-4_0_3: fxm
	cd ~/nco;cvs tag -d nco-4_0_4;cvs tag -d nco-4_0_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.4 release"
	cvs tag -c nco-4_0_4;cvs tag -c nco-4_0_4-1

	* Added (finally) chunking infrastructure to all operators
	Exception is ncwa which does not yet use lmt_all_sct (why?)
	Capability not yet vetted, yet regression tests are passed
	
2010-09-03  Charlie Zender  <zender@uci.edu>

	* Remove SDO from most of homepage since name never stuck

2010-09-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.3 release procedure:
 	Changes since nco-4_0_2: nco_cnv_ccm_ccsm_cf_date() bug, ncbo bug, configure tweaks
	cd ~/nco;cvs tag -d nco-4_0_3;cvs tag -d nco-4_0_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.3 release"
	cvs tag -c nco-4_0_3;cvs tag -c nco-4_0_3-1

	* Document ncra date bug at http://nco.sf.net#bug_ncra_date

2010-09-01  Charlie Zender  <zender@uci.edu>

	* Belatedly removed nco_cal.[ch] (subsumed into nco_cln_utl.[ch])

	* Document UDUNITS_PATH and UDUNITS2_XML_PATH in nco.texi

2010-08-31  Charlie Zender  <zender@uci.edu>

	* Add protective #ifndef clauses to netCDF4 token definitions in nco_utl.hh
	#ifndef <TOKEN>; #define <TOKEN> in Makefile.old

	* Change conditions on compatibility token definitions from 
	#ifdef ENABLE_NETCDF4 to #ifndef <TOKEN>; #define <TOKEN> in Makefile.old
	since that more precisely determines when token definitions are needed

	* Document TODO nco986, clean up ncbo.c patch

2010-08-30  Charlie Zender  <zender@uci.edu>

	* Document TODO nco986, an ncbo bug exposed by AIX xlC compilers. No fix yet.

	* Clean-up nco_cal.c

2010-08-09  Charlie Zender  <zender@uci.edu>

	* NCO fails dpkg-buildpackage configure-build with shared netCDF4 in /usr/local
	This may be expected and OK because buildpackage checks, with
	dh_shlibdeps, that shared library dependencies are resolvable