@@ -6,7 +6,9 @@
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.4 release"
 	cvs tag -c nco-4_0_4;cvs tag -c nco-4_0_4-1
 
-	* Added (finally) chunking infrastructure to all operators
+	* Add chunking options to user-visible documentation
+
+	* Add (finally) chunking infrastructure to all operators
 	Exception is ncwa which does not yet use lmt_all_sct (why?)
 	Capability not yet vetted, yet regression tests are passed
 	
